# SuperPolyak.py

./: .gitignore  AlternatingProjections.py  LICENSE  README.md  SuperPolyak.py  SuperPolyakDemo.ipynb  minimal_polyak_notebook.ipynb  newtoncg.py  polyak.py  problems.py  proxgradient.py  pyproject.toml  util.py
examples/: SuperPolyakDemo.ipynb  problems.py
src/superpolyak/: __init__.py  alternating_projections.py  newtoncg.py  proxgradient.py  util.py
